Small FB warning fix